--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "satellite-maps",
+  "name": "satcat-css",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,19 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
+    "axios": "^0.21.4",
+    "core-js": "^3.19.2",
     "leaflet": "^1.7.1",
     "register-service-worker": "^1.7.1",
     "tle.js": "^4.3.0",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "vue": "^3.2.23",
+    "vue-router": "^4.0.12",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.3",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@types/leaflet": "^1.7.6",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "@vue-leaflet/vue-leaflet": "^0.6.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -29,11 +29,11 @@
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.23",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "sass": "^1.26.5",
+    "eslint-plugin-vue": "^7.20.0",
+    "sass": "^1.44.0",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5"
   }
